--- a/osa4/blogilistabackend/package.json
+++ b/osa4/blogilistabackend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "sinikala",
   "license": "MIT",
@@ -17,6 +17,10 @@
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
