--- a/osa7/bloglist-frontend/package.json
+++ b/osa7/bloglist-frontend/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "cypress": "^4.0.2",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-jest": "^23.7.0",
